@@ -1,3 +1,10 @@
+2009-11-01  Joe Mistachkin  <joe@mistachkin.com>
+
+	* win/tkWinButton.c: [Bug 1739613]: The default width being stored
+	in TSD cannot be put into the process-wide options table.  This fix
+	allocates storage for the default width from the heap and frees it
+	using an exit handler.
+
 2009-10-25  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tkUnixColor.c (TkpGetColor): [Bug 2809525]: Impose a maximum
